# pkg/http/handlers/dogs/payload.go
@@ -2,5 +2,5 @@ package dogs
 
 type DogPayload struct {
 	Name string `json:"name"`
-	EnergyLevel int `json:"power_level"`
+	EnergyLevel int `json:"energy_level"`
 }
