# pkg/http/handlers/monkeys/payload.go
@@ -2,5 +2,5 @@ package monkeys
 
 type MonkeyPayload struct {
 	Name string `json:"name"`
-	EnergyLevel int `json:"power_level"`
+	EnergyLevel int `json:"energy_level"`
 }
